Issue #2207423 by johnv: Removed double lock on workflow_actions for workflow_field.
Issue #2210787 by johnv: Fixed avoid calling 'transition post' twice when workflow_actions is enabled.
Issue #2207423 by johnv: Fixed hook_workflow('transition post') is now called also for workflow_field on the correct moment.
Issue #0843568 by johnv: Added 'revision_id' to {workflow_node_history} when saving a transition.
Issue #2207423 by johnv: Fixed hook_workflow('transition post') is now called only in workflow_actions, avoiding extra hook in other cases.
Issue #2212197 by johnv: Fixed access to workflow history tab per role.
Issue #2102409 by johnv: Fixed multiple workflow_fields per bundle, when saving a new entity.
Issue #2207423 by johnv: Fixed workflow_actions' hook_workflow('transition post') also for non-node entities.
Issue #2102409 by johnv: Fixed multiple workflow_fields per bundle, in workflow_access.
Issue #2216641 by johnv: Fixed notices by workflow_access when saving a node without workflow.
Issue #2216685 by Bastlynn: Fixed WSOD.
Issue #2216685 by Bastlynn: Fixed WSOD, part 2.
Issue #2216685 by johnv: Further cleanup and unification of workflow_node and workflow_field.
Issue #2116179 by johnv: Some more isolation of type_map functions.
Issue #2216685 by johnv: Further cleanup for workflow_vbo.
Issue #2168197 by johnv: Separated workflow_vbo actions into own files, for less footprint and better maintainability.
Issue #2218303 by johnv: Fixed error if you try to assign a state to a non-relevant node type (e.g. in workflow_vbo action).

Since 7.x-2.2
Fixed some problems with WorkflowConfigTransition.
Fixed breadcrumbs on workflow add page.
Issue #2218303 by zihong0: Fixed type in workflow_node_previous_state.
Issue #2226781 by johnv: Changed Admin UI to use Entity UI.
Issue #2226781 by johnv: Added message when saving states.
Issue #2226451 by johnv: Streamlined code around $state->showWidget().